@@ -2,6 +2,13 @@
 	    Alan Hayward  <alan.hayward@arm.com>
 	    David Sherwood  <david.sherwood@arm.com>
 
+	* expr.c (emit_single_push_insn_1): Treat mode sizes as polynomial.
+	Use plus_constant instead of gen_rtx_PLUS.
+
+2018-01-03  Richard Sandiford  <richard.sandiford@linaro.org>
+	    Alan Hayward  <alan.hayward@arm.com>
+	    David Sherwood  <david.sherwood@arm.com>
+
 	* auto-inc-dec.c (set_inc_state): Take the mode size as a poly_int64
 	rather than an int.
 
